5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1649_2443.log
== TEST (2019-04-11 19:50:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("escolha o raio"))
a=float(input("escolha a altura"))
n_o= input("escolha VA ou VC")
if(VA.upper()):
	v=4*pi*r**3/3
	print(v)
else:
	v=pi*a**2*(3*r-a)/3
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(VA.upper()):
NameError: name 'VA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:50:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("escolha o raio"))
a=float(input("escolha a altura"))
n_o= input("escolha 1 ou 2")
if(VA.upper()):
	v=4*pi*r**3/3
	print(v)
else:
	v=pi*a**2*(3*r-a)/3
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(VA.upper()):
NameError: name 'VA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:51:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("escolha o raio"))
a=float(input("escolha a altura"))
n_o= input("escolha 1 ou 2")
if(1):
	v=4*pi*r**3/3
	print(v)
else:
	v=pi*a**2*(3*r-a)/3
	
-- OUTPUT:
179.5943800302165
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:52:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("escolha o raio"))
a=float(input("escolha a altura"))
n_o= input("escolha 1 ou 2")
if(1):
	v=4*pi*r**3/3
	print(round(v, 4))
else:
	v=pi*a**2*(3*r-a)/3
	print(round(v, 4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:55:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("escolha o raio"))
a=float(input("escolha a altura"))
n_o= input("escolha 1 ou 2")
if(1):
	v=pi*a**2*(3*r-a)/3
	print(round(v, 4))
else:
	v=(4*pi*r**3/3)-(pi*a**2*(3*r-a)/3)
	print(round(v, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:58:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("escolha o raio"))
a=float(input("escolha a altura"))
n_o= input("escolha 1 ou 2")
if(1):
	v=pi*a**2*(3*r-a)/3
	print(round(v, 4))
else:
	v=(4*pi*r**3/3)-(pi*a**2*(3*r-a)/3)
	print(round(v, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:59:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("escolha o raio"))
a=float(input("escolha a altura"))
n_o= input("escolha 1 ou 2")
if(n_o==1):
	v=pi*a**2*(3*r-a)/3
	print(round(v, 4))
else:
	v=(4*pi*r**3/3)-(pi*a**2*(3*r-a)/3)
	print(round(v, 4))
-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:59:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("escolha o raio"))
a=float(input("escolha a altura"))
n_o= input("escolha 1 ou 2")
if(n_o==1):
	v=pi*a**2*(3*r-a)/3
	print(round(v, 4))
else:
	v=(4*pi*r**3/3)-(pi*a**2*(3*r-a)/3)
	print(round(v, 4))
-- EXECUTION TIME:
0.163329
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
170.5687
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 20:01:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("escolha o raio"))
a=float(input("escolha a altura"))
n_o= input("escolha 1 ou 2")
if(n_o==1):
	v=(pi*a**2*(3*r-a))/3
	print(round(v, 4))
else:
	v=(4*pi*r**3/3)-(pi*a**2*(3*r-a)/3)
	print(round(v, 4))
-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 20:01:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("escolha o raio"))
a=float(input("escolha a altura"))
n_o= input("escolha 1 ou 2")
if(n_o==1):
	v=(pi*a**2*(3*r-a))/3
	print(round(v, 4))
else:
	v=(4*pi*r**3/3)-(pi*a**2*(3*r-a)/3)
	print(round(v, 4))
-- EXECUTION TIME:
0.151318
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
170.5687
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 20:03:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("escolha o raio"))
a=float(input("escolha a altura"))
n_o= int(input("escolha 1 ou 2"))
if(n_o==1):
	v=(pi*a**2*(3*r-a))/3
	print(round(v, 4))
else:
	v=(4*pi*r**3/3)-(pi*a**2*(3*r-a)/3)
	print(round(v, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 20:03:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("escolha o raio"))
a=float(input("escolha a altura"))
n_o= int(input("escolha 1 ou 2"))
if(n_o==1):
	v=(pi*a**2*(3*r-a))/3
	print(round(v, 4))
else:
	v=(4*pi*r**3/3)-(pi*a**2*(3*r-a)/3)
	print(round(v, 4))
-- EXECUTION TIME:
0.149193
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
